# rust-server-rocket

./: Cargo.toml  README.md  rest.http
src/: bin.rs
