[package]
name = "rust-server-rocket"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "rest-api"
path = "src/bin.rs"

[dependencies]
rocket = "0.5.0-rc.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
